--- a/styles/global.css
+++ b/styles/global.css
@@ -330,7 +330,7 @@ p {
 
 .title-wrapper {
 	width: 100vw;
-	height: 70vh;
+	height: 80vh;
 	position: absolute;
 	z-index: 1;
 	left: 0;
@@ -340,13 +340,13 @@ p {
 
 .full-width {
 	width: 100vw;
-	height: 70vh;
+	height: 80vh;
 	position: relative;
 	left: 50%;
 	right: 50%;
 	margin-left: -50vw;
 	margin-right: -50vw;
-	margin-bottom: 5%;
+	margin-bottom: 3%;
 	margin-top: 80px;
 }
 
@@ -363,13 +363,31 @@ p {
 }
 
 .mid-panel-text {
-	padding-top: 8%; 
+	width: 60%;
 	padding-left: 20%; 
-	padding-right: 20%
+	padding-right: 20%;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	z-index: 2;
+}
+
+.mid-panel-text-top {
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-top: 7%;
+}
+
+.background-panel-pic {
+	width: 100vw; 
+	padding: 0; 
+	z-index: 1
 }
 
 .title {
-	width: 50%;
+	width: 41%;
 	opacity: 0;
 	display: inline-flex;
 	align-items: center;
@@ -475,12 +493,15 @@ p {
 
 /* Picture styles */
 .big-pic {
-	height: 70vh;
+	height: 80vh;
 	width: auto;
 	display: inline-flex;
-	position: absolute;
     right: 0;
-    align-items: center;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
 }
 
 #pic-space {
