--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,11 @@
 /* Font faces */
 
 @font-face {
+	font-family: "Kamryn";
+	src: url("fonts/Kamryn.ttf");
+}
+
+@font-face {
 	font-family: "Tokyo Outline";
 	src: url("fonts/TokyoOutline-Regular.ttf");
 }
@@ -71,7 +76,7 @@ table, th, td {
   --green: #18b276;
   --pink: #FE7062;
   --mediumgray: #292929;
-  --darkgray: #161818;
+  --darkgray: #262626;
   --white: #fff;
   --lightpink: #e4ddde;
 }
@@ -160,15 +165,15 @@ button {
 	text-align: center;
 	text-decoration: none;
 	height: 55px;
-	width: 220px;
+	width: 210px;
 	cursor: pointer;
 	padding: 0;
     color: black;
     border: none;
     background-color: white;
     margin-top: 20px;
-	font-family: "Barlow Extrabold";
-	font-size: 1rem;
+	font-family: "Barlow Bold";
+	font-size: .9rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
 
@@ -252,16 +257,16 @@ button:focus {
 
 /* Text Styles */
 h1 {
-	font-family: "Barlow ExtraBold";
-	font-size: 4rem;
-	line-height: 4rem;
+	font-family: "Kamryn";
+	font-size: 4.3rem;
+	line-height: 5rem;
 	margin-block-end: 0;
 	margin-block-start: 0;
 }
 
 h2 {
 	font-family: "Barlow Bold";
-	font-size: 3rem;
+	font-size: 2.3rem;
 	line-height: 3.3rem;
 	padding-bottom: 5px;
 	margin-block-end: 0;
@@ -270,14 +275,14 @@ h2 {
 
 h3 {
 	font-family: "Barlow Medium";
-	font-size: 1.8rem;
+	font-size: 1.7rem;
 	margin-block-end: 0;
 	margin-block-start: 0;
 }
 
 h4 {
-	font-family: "Barlow Extrabold";
-	font-size: 1.1rem;
+	font-family: "Barlow Bold";
+	font-size: 1rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
 	margin-block-end: 0rem;
@@ -387,12 +392,20 @@ p {
 }
 
 .title {
-	width: 41%;
+	width: 50%;
 	opacity: 0;
 	display: inline-flex;
 	align-items: center;
-	justify-content: left;
-	padding-left: 5%;
+	padding-left: 10%;
+	padding-right: 40%;
+}
+
+.home-title {
+	width: 50%;
+	display: inline-flex;
+	align-items: center;
+	padding-left: 25%;
+	padding-right: 25%;
 }
 
 .context {
