--- a/styles/global.css
+++ b/styles/global.css
@@ -122,10 +122,15 @@ ol li {
 }
 
 li {
-	list-style-type: circle;
+/*	list-style-type: circle;*/
 	font-family: "Barlow Regular";
 	font-size: 1.25rem;
 	margin-top: 1vh;
+
+    background-image:  url(/personal-website/pics/arrow-right.svg);
+    background-position: 0 0;
+    background-size: 24px;
+    background-repeat: no-repeat;
 }
 
 li a {
