--- a/styles/global.css
+++ b/styles/global.css
@@ -114,7 +114,8 @@ a:hover {
 ul {
 	list-style-position: outside; 
 	margin-top: 1vh;
-	margin-bottom: 3vh;
+	margin-bottom: 1vh;
+	margin-left: -15px;
 }
 
 ol li {
@@ -122,15 +123,17 @@ ol li {
 }
 
 li {
-/*	list-style-type: circle;*/
+	list-style-type: "→";
 	font-family: "Barlow Regular";
-	font-size: 1.25rem;
 	margin-top: 1vh;
+	padding-left: 15px;
+	font-size: 1.2rem;
+	line-height: 1.5rem;
 
-    background-image:  url(/personal-website/pics/arrow-right.svg);
+/*    background-image:  url(/personal-website/pics/arrow-right.svg);
     background-position: 0 0;
     background-size: 24px;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;*/
 }
 
 li a {
@@ -263,24 +266,25 @@ button:focus {
 /* Text Styles */
 h1 {
 	font-family: "Kamryn";
-	font-size: 4.3rem;
-	line-height: 4.6rem;
+	font-size: 4rem;
+	line-height: 4.2rem;
 	margin-block-end: 0;
 	margin-block-start: 0;
 }
 
 h2 {
-	font-family: "Barlow Bold";
-	font-size: 2.3rem;
-	line-height: 3.3rem;
+	font-family: "Barlow Medium";
+	font-size: 2rem;
+	line-height: 3rem;
 	padding-bottom: 5px;
 	margin-block-end: 0;
 	margin-block-start: 0;
 }
 
 h3 {
-	font-family: "Barlow Medium";
-	font-size: 1.7rem;
+	font-family: "Barlow Regular";
+	font-size: 1.5rem;
+	padding-bottom: 5px;
 	margin-block-end: 0;
 	margin-block-start: 0;
 }
@@ -296,16 +300,16 @@ h4 {
 
 p {
 	font-family: "Barlow Regular";
-	font-size: 1.25rem;
-	line-height: 1.75rem;
+	font-size: 1.2rem;
+	line-height: 1.5rem;
 	margin-top: .25rem;
 	margin-bottom: .5rem;
 }
 
 .p-XL {
 	font-family: "Barlow Regular";
-	font-size: 1.65rem;
-	line-height: 1.9rem;
+	font-size: 1.5rem;
+	line-height: 1.7rem;
 	margin-block-end: 0;
 	margin-block-start: 0;
 	margin-top: 1vh;
