--- a/styles/global.css
+++ b/styles/global.css
@@ -291,7 +291,7 @@ h3 {
 
 h4 {
 	font-family: "Barlow Bold";
-	font-size: 1rem;
+	font-size: .9rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
 	margin-block-end: 0rem;
