--- a/styles/projects.css
+++ b/styles/projects.css
@@ -66,8 +66,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding:50px;
-    width:400px;
-    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.15);
+    width:600px;
+/*    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.15);*/
     background-color: white;
     font-family: Barlow Regular;
 }
