--- a/styles/global.css
+++ b/styles/global.css
@@ -104,6 +104,10 @@ a:hover {
 	text-decoration: underline;
 }
 
+b {
+	font-weight: bolder;
+}
+
 .subheader-2 a {
 	text-decoration: none;
 	border-bottom: 2px solid;
