--- a/styles/global.css
+++ b/styles/global.css
@@ -60,6 +60,15 @@
 	src: url("fonts/Barlow/Barlow-ExtraBold.ttf");
 }
 
+@font-face {
+	font-family: "Pathway";
+	src: url("fonts/PathwayExtreme.ttf");
+}
+
+@font-face {
+	font-family: "Syne";
+	src: url("fonts/Syne.ttf");
+}
 
 
 /* Table styles */
@@ -77,7 +86,7 @@ table, th, td {
   --pink: #FE7062;
   --mediumgray: #292929;
   --darkgray: #262626;
-  --white: #fff;
+  --white: #F9F7F1;
   --lightpink: #e4ddde;
 }
 
@@ -105,7 +114,7 @@ a:hover {
 }
 
 b {
-	font-family: "Barlow-Regular";
+	font-family: "Pathway";
 	font-weight: 600;
 }
 
@@ -129,7 +138,7 @@ ol li {
 
 li {
 	list-style-type: "→";
-	font-family: "Barlow Regular";
+	font-family: "Pathway";
 	margin-top: 1vh;
 	padding-left: 15px;
 	font-size: 1.2rem;
@@ -186,7 +195,7 @@ button {
     color: black;
     background-color: white;
 /*    margin-top: 20px;*/
-	font-family: "Barlow Bold";
+	font-family: "Pathway";
 	font-size: .9rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
@@ -260,15 +269,17 @@ button:focus {
 
 /* Text Styles */
 h1 {
-	font-family: "Kamryn";
-	font-size: 4rem;
-	line-height: 4.2rem;
+	font-family: "Syne";
+	font-weight: 700;
+	font-size: 4.2rem;
+	line-height: 4.5rem;
 	margin-block-end: 0;
 	margin-block-start: 0;
 }
 
 h2 {
-	font-family: "Barlow Medium";
+	font-family: "Pathway";
+	font-weight: 600;
 	font-size: 2rem;
 	line-height: 3rem;
 	padding-bottom: 5px;
@@ -277,16 +288,18 @@ h2 {
 }
 
 h3 {
-	font-family: "Barlow Regular";
-	font-size: 1.5rem;
+	font-family: "Pathway";
+	font-weight: 500;
+	font-size: 1.6rem;
 	padding-bottom: 5px;
 	margin-block-end: 0;
 	margin-block-start: 0;
 }
 
 h4 {
-	font-family: "Barlow Bold";
+	font-family: "Pathway";
 	font-size: .9rem;
+	font-weight: 700;
 	letter-spacing: 3px;
 	text-transform: uppercase;
 	margin-block-end: 0rem;
@@ -294,17 +307,17 @@ h4 {
 }
 
 p {
-	font-family: "Barlow Regular";
+	font-family: "Pathway";
 	font-size: 1.2rem;
-	line-height: 1.5rem;
+	line-height: 1.7rem;
 	margin-top: .25rem;
 	margin-bottom: .5rem;
 }
 
 .p-XL {
-	font-family: "Barlow Regular";
+	font-family: "Pathway";
 	font-size: 1.5rem;
-	line-height: 1.7rem;
+	line-height: 1.9rem;
 	margin-block-end: 0;
 	margin-block-start: 0;
 	margin-top: 1vh;
@@ -497,7 +510,7 @@ p {
 }
 
 .quote {
-	font-family: 'Chronicle Display Black';
+	font-family: 'Pathway';
 	position: absolute; 
 	font-size: 150px; 
 	color: rgba(160, 97, 213, .4);
