--- a/styles/global.css
+++ b/styles/global.css
@@ -196,6 +196,7 @@ button {
     background-color: white;
 /*    margin-top: 20px;*/
 	font-family: "Pathway";
+	font-weight: 600;
 	font-size: .9rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
