--- a/styles/projects.css
+++ b/styles/projects.css
@@ -69,7 +69,7 @@
     width:600px;
 /*    box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.15);*/
     background-color: white;
-    font-family: Barlow Regular;
+    font-family: Syne;
 }
 
 .pw_prompt label {
