--- a/styles/global.css
+++ b/styles/global.css
@@ -84,7 +84,7 @@ table, th, td {
   --purple: #a061d5;
   --green: #18b276;
   --pink: #FE7062;
-  --mediumgray: #292929;
+  --mediumgray: #3C3C3C;
   --darkgray: #262626;
   --white: #F9F7F1;
   --lightpink: #e4ddde;
